# Weavex

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: qa-master-engineer.md
.github/workflows/: ci.yml  release.yml
src/: agent.rs  cli.rs  client.rs  config.rs  error.rs  formatter.rs  loading.rs  main.rs  markdown_preview.rs  ollama_local.rs
