[package]
name = "weavex"
version = "1.0.5"
edition = "2021"
authors = ["guitaripod"]
description = "Weave together web search and AI reasoning - an autonomous research agent powered by local LLMs"
license = "MIT"
repository = "https://github.com/guitaripod/weavex"
keywords = ["ai", "search", "agent", "ollama", "llm"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
